[package]
name = "influxdb-wakatime-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.22"
dotenv = { version = "0.15.0" }
futures = "0.3.24"
influxdb2 = "0.3"
influxdb2-structmap = "0.2"
num-traits = "0.2"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
