[package]
name = "influxdb-wakatime-metrics"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.22", default-features = false }
dotenv = { version = "0.15.0" }
futures = { version = "0.3.24", default-features = false }
influxdb2 = { version = "0.3" }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
